Fix flicker issues

--- a/src/styles/_screen.scss
+++ b/src/styles/_screen.scss
@@ -17,5 +17,6 @@
     color: var(--colorDark);
     height: 8rem;
     position: relative;
+    overflow: hidden;
   }
 }
